syntax = "proto3";

package spine.tools.compiler.enrichment.mapbuilder;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.tools.compiler.enrichment.mapbuilder";
option java_outer_classname = "TestEnrichmentsProto";
option java_multiple_files = true;

import "google/protobuf/descriptor.proto";

// Declarations for use in `EnrichmentMapBuilderTest` only.

message SectionIdListEnrichment {
    option (enrichment_for) = "spine.tools.compiler.enrichment.mapbuilder.OrderUpdated,"
                              "spine.tools.compiler.enrichment.mapbuilder.OrderCreated";

    repeated string section_ids = 1 [(by) = "id"];
}

message ImageIdListEnrichment {
    option (enrichment_for) = "spine.tools.compiler.enrichment.mapbuilder.*";

    repeated string image_ids = 1 [(by) = "id"];
}

message OwnerIdEnrichment {
    option (enrichment_for) = "spine.tools.compiler.enrichment.mapbuilder.OrderUpdated,"
                              "spine.tools.compiler.enrichment.mapbuilder.SectionUpdated";

    string owner_id = 1 [(by) = "id | order_id"];
}

message ManagerIdEnrichment {
    option (enrichment_for) = "spine.tools.compiler.enrichment.mapbuilder.inner.*, spine.tools.compiler.enrichment.mapbuilder.SectionUpdated";

    string manager_id = 1 [(by) = "id | order_id"];
}
