syntax = "proto3";

package spine.tools.compiler.enrichment.mapbuilder;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.tools.compiler.enrichment.mapbuilder";
option java_outer_classname = "TestEventsProto";
option java_multiple_files = true;

// This file contains test event types declarations for `EnrichmentMapBuilderTest` only.

message OrderUpdated {
    string id = 1;
}

message OrderCreated {
    string id = 1;
}

message SectionUpdated {
    string id = 1;

    string order_id = 2;
}
